doing some absulate

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="four" style="margin-top: 80px;">
+    <div class="four d-flex justify-content-center" style="margin-top: 80px;">
       <div class="row mna">
         <div class="col-3 req  d-flex justify-content-center">
           <div class="card card-item category-item">
@@ -301,6 +301,9 @@
 
 
 
+  </div>
+  <div class="" style="display: flex; justify-content: center; align-items: center; ">
+    <div style="height: 10rem; width: 10rem; background-color: aquamarine; transform: rotate(45deg); position: absolute; margin-bottom: 55rem;"  ></div>
   </div>
 
 </body>
